@@ -37,6 +37,7 @@ version 2.5.8:
     the mouse
   - [drawgantt-svg] fix possible SQL injection with the filters
   - [drawgantt-svg] improve the label_display_regex text replacement mechanism
+  - [drawgantt-svg/oarstat] fix past and current moldable jobs display
 
 
 version 2.5.7:
